# rosemyne

./: .gitattributes  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
scripts/: bump-version.ts  deploy.ts
src/: App.scss  App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/sounds/: capture.flac  task_success.flac
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error_serializers.rs  lib.rs  locale.rs  main.rs
src-tauri/src/capture/: capture_trait.rs  linux.rs  mod.rs  windows.rs
src-tauri/src/capture_preview/: commands.rs  mod.rs
src-tauri/src/dimensions/: impls.rs  traits.rs
src-tauri/src/file_clipboard/: linux.rs  mod.rs  windows.rs
src-tauri/src/history_store/: commands.rs  compile.rs  filter.rs  metadata.rs  mod.rs  store.rs
src-tauri/src/image_processors/: crop.rs  draw.rs  effects.rs  error.rs  mod.rs  overlay.rs  processor_trait.rs
src-tauri/src/image_uploader/: commands.rs  error.rs  mod.rs  uploader_options.rs
src-tauri/src/recording/: audio.rs  commands.rs  error.rs  linux.rs  mod.rs  recorder_trait.rs  windows.rs
src-tauri/src/screen_manager/: commands.rs  mod.rs  monitor_names.rs  screenshot_manager.rs  window.rs
src-tauri/src/screenshot_window/: linux.rs  manager_trait.rs  mod.rs  windows.rs
src-tauri/src/settings_manager/: commands.rs  error.rs  mod.rs  settings.rs  shortcuts.rs
src-tauri/src/sharex_migration/: commands.rs  error.rs  migration.rs  mod.rs
src-tauri/src/sound_manager/: commands.rs  mod.rs
src/components/Button/: Button.module.scss  Button.tsx
src/components/ContextMenu/: ContextMenu.module.scss  ContextMenu.tsx  eventHandler.ts  useContextMenu.ts
src/components/EditableTableList/: EditableTableList.module.scss  EditableTableList.tsx
src/components/ImageViewer/: ImageViewer.module.scss  ImageViewer.tsx
src/components/Input/: Input.module.scss  Input.tsx
src/components/KeyRenderer/: KeyRenderer.module.scss  KeyRenderer.tsx
src/components/Modal/: Modal.module.scss  Modal.tsx
src/components/OverlayAttributeList/: OverlayAttributeList.module.scss  OverlayAttributeList.tsx
src/constants/: imageOverlay.ts  index.ts
src/directives/: clickOutside.ts
src/helpers/: canvasRenderer.ts  index.ts  previewStream.ts  safeInvoke.ts  saveScreenshot.ts  saveVideoThumbnail.ts  settingsLabels.ts  systemDateFormat.ts  updater.ts  videoThumbnail.ts
src/states/: onboardingState.ts  overlayDefaultsState.ts  screenshotOverlayState.ts  settingsState.ts  tagFilterState.ts  toastState.ts
src/types/: imageOverlay.ts  index.ts  request.ts  screenshot.ts  utils.ts
(+93 files in other folders)
